package Model.Missile;

public interface MissileAnimStrategy {
    void animate();
}
