@startuml

title __MISSILE's Class Diagram__\n

  namespace Model {
    namespace Missile {
      class Model.Missile.Missile {
          {static} + INIT_MISSILE_SIZE : int
          {static} + MAX_MISSILE_SIZE : int
          {static} + STATE_DONE : int
          {static} + STATE_EXPLODING : int
          {static} + STATE_SHOOTING : int
          {static} + UNIT_MOVE : int
          ~ color1 : Color
          ~ color2 : Color
          ~ size : int
          ~ state : int
          ~ target : Float
          + Missile()
          + getCollisionRadius()
          + render()
          + update()
          - updateState()
      }
    }
  }
  

  namespace Model {
    namespace Missile {
      class Model.Missile.MissileAnimExploding {
          + MissileAnimExploding()
          + animate()
      }
    }
  }
  

  namespace Model {
    namespace Missile {
      class Model.Missile.MissileAnimShooting {
          + MissileAnimShooting()
          + animate()
      }
    }
  }
  

  namespace Model {
    namespace Missile {
      interface Model.Missile.MissileAnimStrategy {
          {abstract} + animate()
      }
    }
  }
  

  Model.Missile.Missile -up-|> Model.GameFigure
  Model.Missile.Missile o-- Model.Missile.MissileAnimStrategy : animStrategy
  Model.Missile.MissileAnimExploding .up.|> Model.Missile.MissileAnimStrategy
  Model.Missile.MissileAnimExploding o-- Model.Missile.Missile : contxt
  Model.Missile.MissileAnimShooting .up.|> Model.Missile.MissileAnimStrategy
  Model.Missile.MissileAnimShooting o-- Model.Missile.Missile : context


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
